--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "eat-my-shorts",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "axios": "^0.18.0",
     "d3": "^5.9.2",
